--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,7 @@ package-lock.json
 # ------------------------------
 # 6. ПЕРЕМЕННЫЕ ОКРУЖЕНИЯ
 # ------------------------------
-.env                # Основной файл переменных
-.env.local          # Локальные настройки
-.env.production     # Продакшен настройки
+config.js
 
 # ------------------------------
 # 7. ДОПОЛНИТЕЛЬНО
